--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,28 @@
-dvc
-dvc[s3]
-pandas 
-mlflow==2.2.2
-notebook
+# Core
 numpy
-scikit-learn
+pandas
+scikit-learn # (XGBoost needs it)
 matplotlib
-pydantic==2.7.4
-python-box==6.0.2
-pyYAML
-tqdm
-ensure==1.0.2
+xgboost
 joblib
-types-PyYAML
-fastapi
+tqdm
+pyyaml
+notebook
+
+# MLOps
+dvc[s3]
+mlflow==2.2.2
 dagshub
 
+# Web API
 fastapi
 uvicorn
-joblib
-numpy
-xgboost
 python-multipart
-pytest
-scikit-learn  # (XGBoost needs it)
-
-# Additional required libraries
-dvc
-dvc[s3]
-pandas
-mlflow==2.2.2
-notebook
-matplotlib
 pydantic==2.7.4
-python-box==6.0.2
-pyYAML
-tqdm
-ensure==1.0.2
+
+# Dev
+pytest
 types-PyYAML
-dagshub
+ensure==1.0.2
+python-box==6.0.2
 
