--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Core
+# === Core Libraries ===
 numpy
 pandas
 scikit-learn # (XGBoost needs it)
@@ -9,18 +9,18 @@ tqdm
 pyyaml
 notebook
 
-# MLOps
+# === MLOps Tools ===
 dvc[s3]
 mlflow==2.2.2
 dagshub
 
-# Web API
+# === API Development ===
 fastapi
 uvicorn
 python-multipart
 pydantic==2.7.4
 
-# Dev
+# === Development & Type Checking ===
 pytest
 types-PyYAML
 ensure==1.0.2
