--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -24,6 +24,12 @@ jobs:
 
       - name: Run tests
         run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest
+          
+      - name: Run Pytest
+        run: |
           pytest tests/
 
       - name: Echo success
